2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/40_convfloat_dans_left_right.deca
// Description :
//     Test sur convfloat : avce le deux cas possible : left and right  
// Resultats :
//    Valide 
//
// Historique :
// cree le 12/01/2024

{
    1.2 + 1 ;

    1 + 2.2 ;
}