2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/39_and_int_int.deca
// Description :
//      opération && entre int et int 
// Resultats :
//    Erreur Contexteulle : ligne 10 : l'opération && n'est pas possible entre 'int' et 'int'
//
// Historique :
// cree le 10/01/2024

{
    1 && 2 ;
}